# moonshot_quest_1

./: .gitignore  README.md
question-1/: Project_README.md  config.json  download_models.py  main.py  phase1_summary.md  phase2_summary.md  phase3_summary.md  pyproject.toml  requirements.txt  test_report.md  test_suite.py
question-1/api/v1/: router.py
question-1/api/v2/: router.py
question-1/api/v3/: router.py
question-1/data/: vector_store.pkl
question-1/services/: agent.py  document_store.py  embedding.py  html_parser.py  reranker.py  search_engine.py
question-1/templates/: index.html
question-1/templates/v1/: index.html
question-1/templates/v2/: index.html
question-1/templates/v3/: index.html
