[project]
name = "question-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.135.2",
    "jinja2>=3.1.6",
    "numpy>=2.4.3",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.22",
    "sentence-transformers>=5.3.0",
    "torch>=2.11.0",
    "uvicorn>=0.42.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
